                                 Muldis::D
                                  Changes
---------------------------------------------------------------------------

2010-10-xx

    * Muldis::D version 0.141.0 is released on CPAN as
    Muldis-D-0.141.0.tar.gz.

    * (Types_Catalog.pod, Routines_Catalog.pod, Basics.pod, Types.pod)  In
    a partial reversal of one aspect of release 0.140.0, brought back the
    catalog data type "Comment" and changed the declared types of all
    "scm_comment" attributes or parameters back to "Comment" (or
    "just_of.Comment").  However, the restored "Comment" type does not
    compose the "Ordered","Stringy" mixins as the old one did, and there is
    still no as-value literal syntax for it in the STD dialects.

    * (Types_Catalog.pod, Routines_Catalog.pod, PTMD_STD.pod)  Renamed 3
    catalog types as follows: "SysCatSet" -> "CatalogSet", "OVLScalar" ->
    "SysScalar", "SysScaVal[Expr|Stmt]NodeSet" ->
    "OVLScaVal[Expr|Stmt]NodeSet"; also updated each of the 2 catalog types
    "[Expr|Stmt]NodeSet" to rename 1 of its attrs from "ovl_*" to "sys_*".

    * (Types.pod, Types_Catalog.pod)  Split the core scalar type "Text"
    into itself plus the 2 new "Unicode_Text" and "SysText" such that
    "Unicode_Text" is identical to the old "Text" but for the name and the
    new "Text" is now a mixin type that "Unicode_Text" composes (instead of
    "Stringy", which is now implicit as the new "Text" composes "Stringy")
    and "SysText" is now a domain type that unions initially just
    "Unicode_Text".  "Text" and "Unicode_Text" are declared in Types.pod
    and "SysText" in Types_Catalog.pod.  Also updated each of the catalog
    types "Name" and "Comment" so that its possrep attribute is now
    "SysText"-typed rather than "Text"-typed.

    * (Types.pod, Types_Catalog.pod, Basics.pod)  Added the 2 new core
    scalar types "Minimal_Text" (which composes the "Text" mixin) and
    "MCPString", the first in Types.pod and the second in