@@ -9,7 +9,7 @@ Muldis::D::Basics -
 
 =head1 VERSION
 
-This document is Muldis::D::Basics version 0.140.0.
+This document is Muldis::D::Basics version 0.141.0.
 
 =head1 PREFACE
 
