@@ -9,7 +9,7 @@ Muldis D Array specific operators
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Array version 0.140.0.
+This document is Muldis::D::Core::Array version 0.141.0.
 
 =head1 PREFACE
 
