@@ -9,7 +9,7 @@ Muldis D explicit type-casting operators
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Cast version 0.140.0.
+This document is Muldis::D::Core::Cast version 0.141.0.
 
 =head1 PREFACE
 
