@@ -9,7 +9,7 @@ Muldis D routines for basic command-line user I/O
 
 =head1 VERSION
 
-This document is Muldis::D::Core::STDIO version 0.140.0.
+This document is Muldis::D::Core::STDIO version 0.141.0.
 
 =head1 PREFACE
 
