@@ -9,7 +9,7 @@ Muldis D operators for all scalar types
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Scalar version 0.140.0.
+This document is Muldis::D::Core::Scalar version 0.141.0.
 
 =head1 PREFACE
 
