@@ -9,7 +9,7 @@ Muldis D extension for count-sensitive relational operators
 
 =head1 VERSION
 
-This document is Muldis::D::Ext::Counted version 0.140.0.
+This document is Muldis::D::Ext::Counted version 0.141.0.
 
 =head1 PREFACE
 
