@@ -2,10 +2,14 @@
                                   Changes
 ---------------------------------------------------------------------------
 
-2010-10-xx
+2010-10-12
 
     * Muldis::D version 0.141.0 is released on CPAN as
     Muldis-D-0.141.0.tar.gz.
+
+    * This release is a snapshot in the process of externalizing the
+    complexities of character strings, particularly those brought on by the
+    likes of Unicode, from the language core.  More will follow soon.
 
     * (Types_Catalog.pod, Routines_Catalog.pod, Basics.pod, Types.pod)  In
     a partial reversal of one aspect of release 0.140.0, brought back the
